[package]
name = "hold_my_beer"
version = "0.2.0"
authors = ["Jake Shadle <jake.shadle@frostbite.com>"]
edition = "2018"
description = "Don't let unsafe get you down"
license = "MIT/Apache-2.0"
repository = "https://github.com/Jake-Shadle/hold_my_beer"

[badges]
maintenance = { status = "actively-developed" }